--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Mitelemao - Ver Mitele sin publicidad</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142215087-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142215087-1');
+</script>
+
     <link rel="stylesheet" href="style.css">
     <link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
