Update:compatible con a3media

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mitelemao - Ver Mitele sin publicidad</title>
+    <title>Telemao - Ver Mitele y A3Player sin publicidad ni registro</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142215087-1"></script>
 <script>
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-   <h1 class="white centertext">TELEMAO - <span>Ver Vídeos de MiTele sin publicidad</span></h1>
+   <h1 class="white centertext">TELEMAO - <span>Ver Vídeos de MiTele y A3Player sin publicidad ni registro</span></h1>
    <br>
    <br>
    <br>
